--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.card-border{
+    @apply absolute p-10 w-full  -inset-1 group-hover:bg-gradient-to-r to-violet-600 from-pink-600 rounded-lg blur opacity-75 transition duration-500 group-hover:animate-tilt
+}
