--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 .card-border{
     @apply absolute p-10 w-full  -inset-1 group-hover:bg-gradient-to-r to-violet-600 from-pink-600 rounded-lg blur opacity-75 transition duration-500 group-hover:animate-tilt
